app/globals.css
/* ... */
.dark {
  --background: oklch(0.145 0 0);
  --foreground: oklch(0.985 0 0);
  --card: oklch(0.205 0 0);
  --card-foreground: oklch(0.985 0 0);
  /* --popover: oklch(0.205 0 0); */
  --popover: oklch(0.31 0.03 260.89);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.63 0.2 264.02);
  --primary-foreground: oklch(0.205 0 0);
  --secondary: oklch(0.269 0 0);
  --secondary-foreground: oklch(0.985 0 0);
  --muted: oklch(0.269 0 0);
  --muted-foreground: oklch(0.708 0 0);
  /* --accent: oklch(0.269 0 0); */
  --accent: oklch(0.37 0.04 257.29);
  --accent-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.556 0 0);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }

  /* Thin scrollbar css start */
  .scrollbar-thin::-webkit-scrollbar {
    @apply w-1.5;
  }

  .scrollbar-thin::-webkit-scrollbar-track {
    @apply bg-transparent;
  }

  .scrollbar-thin::-webkit-scrollbar-thumb {
    @apply bg-slate-300 rounded-[50rem] hover:bg-slate-400;
  }

  .scrollbar-thin:active::-webkit-scrollbar-thumb {
    @apply bg-slate-500;
  }
  /* Thin scrollbar css start */

  /* Invisible scrollbar css start */
  .scrollbar-invisible::-webkit-scrollbar-thumb {
    @apply bg-transparent;
  }

  .hover\:scrollbar-visible:hover::-webkit-scrollbar-thumb {
    @apply bg-slate-300;
  }

  .hover\:scrollbar-visible:hover::-webkit-scrollbar-thumb:hover {
    @apply bg-slate-400;
  }

  .hover\:scrollbar-visible:hover::-webkit-scrollbar-thumb:active {
    @apply bg-slate-500;
  }
  /* Invisible scrollbar css end */

  /* Reset css Start */
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply font-semibold text-foreground;
  }

  h1,
  .h1 {
    font-size: clamp(2rem, 1.2rem + 4vw, 4.5rem);
  }

  h2,
  .h2 {
    font-size: clamp(1.75rem, 1.11rem + 3.2vw, 3.75rem);
  }

  h3,
  .h3 {
    font-size: clamp(1.5rem, 1.02rem + 2.4vw, 3rem);
  }

  h4,
  .h4 {
    font-size: clamp(1.375rem, 1.095rem + 1.4vw, 2.25rem);
  }

  h5,
  .h5 {
    font-size: clamp(1.25rem, 1.05rem + 1vw, 1.875rem);
  }

  h6,
  .h6 {
    font-size: clamp(1.125rem, 1.005rem + 0.6vw, 1.5rem);
  }
  a {
    @apply active:scale-[.95];
  }
  span {
    @apply inline-block;
  }
  /* Reset css End */

  /* ======================================== Apexchart css End ======================================== */
  .apexcharts-tooltip.apexcharts-theme-light {
    @apply bg-white dark:bg-neutral-600 border-neutral-300 dark:border-neutral-500;
    .apexcharts-tooltip-title {
      @apply bg-neutral-600 dark:bg-neutral-500 border-b-[1px] border-neutral-300 dark:border-neutral-400;
    }
  }

  .apexcharts-text.apexcharts-yaxis-label,
  .apexcharts-text.apexcharts-xaxis-label {
    @apply fill-neutral-600 dark:fill-white;
  }

  .apexcharts-yaxis {
    @apply translate-x-[10px];
  }

  .remove-tooltip-title .apexcharts-tooltip-title {
    @apply hidden;
  }
  .remove-tooltip-marker .apexcharts-tooltip-marker {
    display: none !important;
  }
  .rounded-tooltip-value .apexcharts-tooltip.apexcharts-theme-light {
    @apply w-11 h-11 flex items-center justify-center flex-col;
    .apexcharts-tooltip-text-y-label {
      @apply hidden;
    }

    .apexcharts-tooltip-marker {
      @apply hidden;
    }
    .apexcharts-tooltip-text-y-value {
      @apply ms-0;
    }

    .apexcharts-tooltip-text {
      @apply flex;
    }
  }
  .apexcharts-legend-text {
    @apply text-neutral-600 dark:text-white;
  }

  .apexcharts-tooltip-z-none {
    .apexcharts-tooltip-z-group {
      @apply hidden;
    }
  }

  .title-style {
    .apexcharts-text.apexcharts-datalabel-value {
      @apply hidden;
    }
    .apexcharts-text.apexcharts-datalabel-label {
      @apply fill-neutral-600 text-sm font-bold;
    }
  }

  .circle-none {
    circle {
      @apply hidden;
    }
  }

  .donutChart {
    @apply h-0 min-h-[163px] -mt-[32px];
  }
  .donutChart {
    min-height: 163px !important;
  }

  .margin-16-minus {
    @apply -m-[16px];
  }

  #semiCircleGauge {
    transform: translateY(22px) translateX(14px);
  }

  .dark {
    .apexcharts-legend-text {
      color: #fff !important;
    }
    .apexcharts-text tspan {
      fill: #fff;
    }
  }

  .label-bold .apexcharts-text.apexcharts-yaxis-label,
  .label-bold .apexcharts-text.apexcharts-xaxis-label {
    fill: #111827;
    font-size: 16px;
    font-weight: 600;
  }

  .apexcharts-text tspan {
    font-family: inherit;
    font-size: 16px;
    font-weight: 500;
  }

  [dir="rtl"] .apexcharts-yaxis {
    transform: translateX(-46px);
  }

  .apexcharts-tooltip.apexcharts-theme-light {
    @apply dark:bg-slate-600 dark:border-slate-500;
  }

  .apexcharts-tooltip.apexcharts-theme-light .apexcharts-tooltip-title {
    @apply dark:bg-slate-600 dark:border-slate-500;
  }

  .label--20-px .apexcharts-text.apexcharts-yaxis-label,
  .label--20-px .apexcharts-text.apexcharts-xaxis-label {
    transform: translateX(-20px);
  }
  /* ======================================== Apexchart css End ======================================== */
}

.dark .apexcharts-tooltip.apexcharts-theme-light,
.dark .apexcharts-tooltip.apexcharts-theme-light .apexcharts-tooltip-title {
  @apply bg-slate-900 border-slate-600;
}
/* ... */

